--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     </script>
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.js"></script>
-    <script src="lib/underscore/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.1/underscore-min.js"></script>
     <script src="js/swipe.js"></script>
     <script src="js/index.js"></script>
 </body>
